src/test/deca/syntax/valid/parser/oracle/eq_neq_expr_second_deriv.deca
{
  -"Moon !" == 5.0 == 5 == (--10.0 + 50.0); 5.89 == --50 == 2 == "Hello World !";
}
