src/test/deca/syntax/invalid/test_dir/added/parser/printlnx_two_expr_without_comma0.deca
{
	printlnx("Hello World !" 2.0);
}
